--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <h1>Ing. Omar Gutierrez Samano's Portfolio Page</h1>
   <h2>Im a electronics engineer and hifi audio enthusiast, trying to become the best web developer that i can</h2>
-  <h3><a href="old personal site page/old_pers_site.html" >visit my old site</a></h3>
-  <img src="/my portfolio project/old personal site.png" height="300" alt=" image of my old site web page">
+  <h3><a href="../my portfolio project/old personal site page/old_pers_site.html" >visit my old site</a></h3>
+  <img src="old personal site.png" height="300" alt=" image of my old site web page">
   <h2><a href="../my portfolio project/my movie ranking proyect/index.html">The Movie Ranking Proyect</a></h2>
   <img src="movie ranking.png" height="300"alt="image of a movie ranking made by me">
 </body>
